grammer.bnf
S      ::= expr
expr   ::= equality

equality ::= relational "==" relational | relational "!=" relational | relational
relational ::= add "<" add | add "<=" add | add ">" add | add ">=" add | add

add    ::= add '+' mul | add '-' mul | mul
/*
add    ::= mul add'
add'   ::= "" | '+' mul' | '-' mul'
 */

mul    ::= mul '*' unary | mul '/' unary | mul '%' unary | unary
/*
mul    ::= unary mul'
mul'   ::= "" | '*' mul' | '/' mul'
 */

unary  ::= '-' unary | '+' unary | primary
primary::= (expr) | num
num    ::= integer | float


function_def ::= "fn" identifity "(" ")" ("->" identifity)? "{" (expr ';'?)* "\n" "}"
